--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+	implementation "io.springfox:springfox-boot-starter:3.0.0"
+	compile "io.springfox:springfox-swagger-ui:3.0.0"
 }
 
 test {
